--- a/webapp/css/home.css
+++ b/webapp/css/home.css
@@ -324,22 +324,16 @@ strong{
 	text-align:left;
 }
 #sendnote_float_r{
-	height:300px;
 	width:698px;
+	height:230px;
 	float:left;
-	border:#00CCFF solid 1px;
+	border:#4796E4 solid 1px;
 }
 #sendnote_float{
 	width:498px;
-	height:190px;
+	height:141px;
 	float:left;
-	border:#00CCFF solid 1px;
-}
-#sendnotehead{
-	height:25px;
-	background-color:#00CCFF;
-	font-size:14px;
-	padding-left:5px;
+	border:#4796E4 solid 1px;
 }
 #sendnotecontent h4{
 	padding-left:10px;
@@ -348,13 +342,13 @@ strong{
 #sendnote, #double1, #double2{
 	width:498px;
 	float:left;
-	border:#00CCFF solid 1px;
+	border: #4796E4 solid 1px;
 	background-color:#EBEBEB;
 }
 
 #sendnotehead, #doublehead1, #doublehead2{
 	height:25px;
-	background-color:#00CCFF;
+	background-color: #4796E4;
 	font-size:14px;
 	padding-left:5px;
 	padding-top:4px;
