--- a/webapp/css/frame.css
+++ b/webapp/css/frame.css
@@ -28,10 +28,21 @@ body{
 	font-size:10px;
 	padding: 2px;
 	float:right;
-	margin-top:20px;
+	margin-top:25px;
 	margin-right:5px;
 }
-
+#logalright li
+{
+	list-style:none;
+	display:inline;
+}
+#logalright li#cart_li.hover
+{
+	background:#FFFFFF;
+	list-style:none;
+	display:inline;
+	border-bottom:2px #FFFFFF solid;
+}
 #logalright a:link{
 	font-size: 12px;
 	color: #FFFFFF;
@@ -55,6 +66,31 @@ body{
 	color: #FFFFFF;
 }
 
+#logalright #cart_a.hover
+{
+	color:#4796E4;
+	text-decoration:none;
+}
+#cart
+{
+	position:absolute;
+	top:44px;
+	right:37px;
+	display:block;
+	height:100px;
+	width:300px;
+	background:#FFF;
+	border:#4796E4 solid ;
+	border-width: 0px 1px 1px 1px;
+	display:none;
+}
+.cart_loading
+{
+	background:url(../image/cart_loading.gif);
+	height:32px;
+	width:32px;
+	display:block;
+}
 #container{
 	position:relative;
 	margin:0px auto 0px auto;
