--- a/webapp/css/home.css
+++ b/webapp/css/home.css
@@ -62,11 +62,14 @@ body{
 	background:url(../image/loading.gif);
 	height:16px;
 	width:16px;
-	display: inline-block;
 }
 span.red
 {
 	color:#FF0000;
+}
+.left_float
+{
+	float:left;
 }
 span.close,span.close:hover
 {
@@ -130,25 +133,37 @@ span.close
 	background-image:url(../image/logal8.png);
 	width:799px;
 	height:45px;
+	
 }
 #logalright{
 	color:white;
 	font-size:10px;
 	padding: 2px;
 	float:right;
-	margin-top:20px;
+	margin-top:25px;
 	margin-right:5px;
 }
-
+#logalright li
+{
+	list-style:none;
+	display:inline;
+}
+#logalright li#cart_li.hover
+{
+	background:#FFFFFF;
+	list-style:none;
+	display:inline;
+	border-bottom:2px #FFFFFF solid;
+}
 #logalright a:link{
 	font-size: 12px;
-	color: #FFFFFF;
+	color:#FFF;
 	text-decoration: none;
 
 }
 #logalright a:visited{
 	font-size: 12px;
-	color: #FFFFFF;
+	color: #FFF;
 	text-decoration: none;
 
 }
@@ -162,7 +177,31 @@ span.close
 	font-size: 12px;
 	color: #FFFFFF;
 }
-
+#logalright #cart_a.hover
+{
+	color:#4796E4;
+	text-decoration:none;
+}
+#cart
+{
+	position:absolute;
+	top:44px;
+	right:37px;
+	display:block;
+	height:100px;
+	width:300px;
+	background:#FFF;
+	border:#4796E4 solid ;
+	border-width: 0px 1px 1px 1px;
+	display:none;
+}
+.cart_loading
+{
+	background:url(../image/cart_loading.gif);
+	height:32px;
+	width:32px;
+	display:block;
+}
 #container{
 	position:relative;
 	margin:0px auto 0px auto;
@@ -377,7 +416,7 @@ strong{
 }
 #recommend ul li a:hover, #new ul li a:hover, #life ul li a:hover{
 	color:#FF0000;
-	text-decoration:underline;
+	text-decoration:none;
 }
 
 #footer{
