--- a/webapp/css/frame.css
+++ b/webapp/css/frame.css
@@ -3,6 +3,126 @@ body{
 	font-size: 12px;
 	text-align: center;
 	background:transparent url(../image/back.jpg) scroll center top;
+	-moz-user-select: none; -khtml-user-select: none; user-select: none;
+}
+/*---------------气泡提示------------------*/
+.lj-tipsWrap{min-width:10px;min-height:15px;font-family:'Segoe UI',Calibri, 'Myriad Pro', Myriad, 'Trebuchet MS', Helvetica, Arial, sans-serif;}
+.lj-tipsWrap,.lj-in,.lj-close{display:inline-block;}
+.lj-tipsWrap{background:#F4FBFF;line-height:1.5em;padding:4px 10px 4px 10px; margin-top:-4px;border:1px solid #2192D3;position: absolute;text-align:left;}
+.lj-in{position: absolute;zoom:1;border:10px dashed transparent;width:0px;height:0px;}
+.lj-in .lj-span{zoom:1;width:0px;height:0px;overflow:hidden;}
+.lj-close{position: absolute;text-decoration:none;color:#000;font-size:14px;zoom:1;text-indent:1px;height:9px; width:9px; overflow:hidden;line-height:0.5em; right:0; top:0;}
+.lj-close:hover{color:#39F;}
+.lj-content{}
+.lj-top{border-top:10px solid #2192D3;bottom:-20px; left:3px;}
+.lj-top .lj-span{border-top:10px solid #F4FBFF;margin:-11px 0 0 -10px;}
+.lj-right{border-right:10px solid #2192D3;left:-20px; top:2px;}
+.lj-right .lj-span{border-right:10px solid #F4FBFF;margin:-10px 0 0 -9px;}
+.lj-bottom{border-bottom:10px solid #2192D3;top:-20px; left:3px;}
+.lj-bottom .lj-span{border-bottom:10px solid #F4FBFF;margin:-9px 0 0 -10px;}
+.lj-left{border-left:10px solid #2192D3;right:-21px; top:3px; }
+.lj-left .lj-span{border-left:10px solid #F4FBFF;margin:-10px 0 0 -11px;}
+.lj-left ~ .lj-close{left:0;}
+/*css 3 渐进增强*/
+.lj-tipsWrap{-webkit-border-radius:3px;-moz-border-radius:3px;-webkit-box-shadow:2px 2px 3px #eee;-moz-box-shadow:2px 2px 3px #eee;}
+
+
+
+/*----------- 可配置css  kind ------------*/
+.lj-tipsWrap{ position: fixed; z-index:1;} /* 可修改z-index 让他不会被盖住*/
+/* error css */
+.lj-error{background:#F90;color:#f30; border:1px solid #FB8888; background:#FEF2F2;}
+.lj-error .lj-top{border-top-color:#FB8888;}
+.lj-error .lj-right{border-right-color:#FB8888;}
+.lj-error .lj-left{border-left-color:#FB8888;}
+.lj-error .lj-bottom{border-bottom-color:#FB8888;}
+
+.lj-error .lj-top .lj-span{border-top-color:#FEF2F2;}
+.lj-error .lj-right .lj-span{border-right-color:#FEF2F2;}
+.lj-error .lj-left .lj-span{border-left-color:#FEF2F2;}
+.lj-error .lj-bottom .lj-span{border-bottom-color:#FEF2F2;}
+
+/* correct css */
+.lj-correct{color:#000; border:1px solid #2192D3; background:#F4FBFF;}
+.lj-correct .lj-top{border-top-color:#2192D3;}
+.lj-correct .lj-right{border-right-color:#2192D3;}
+.lj-correct .lj-left{border-left-color:#2192D3;}
+.lj-correct .lj-bottom{border-bottom-color:#2192D3;}
+
+.lj-correct .lj-top .lj-span{border-top-color:#F4FBFF;}
+.lj-correct .lj-right .lj-span{border-right-color:#F4FBFF;}
+.lj-correct .lj-left .lj-span{border-left-color:#F4FBFF;}
+.lj-correct .lj-bottom .lj-span{border-bottom-color:#F4FBFF;}
+/*---------------气泡提示------------------*/
+.hide
+{
+	display:none;
+}
+.loading
+{
+	background:url(../image/loading.gif);
+	height:16px;
+	width:16px;
+}
+span.red
+{
+	color:#FF0000;
+}
+.left_float
+{
+	float:left;
+}
+.right_text
+{
+	text-align:right;
+}
+span.close,span.close:hover
+{
+	height:16px;
+	width:18px;
+	display:inline-block;
+	float:right;
+	right:10px;
+	cursor:pointer;
+}
+span.close:hover
+{
+	background: url(../image/button2.png);
+}
+span.close
+{
+	background:url(../image/button1.png);
+}
+#overlay
+{
+	background:#000;
+	opacity:0.5;
+	display:none;
+	position:fixed;
+	top:0px;
+	left:0px;
+	height:100%;
+	width:100%;
+}
+#login_float
+{
+	position:fixed;
+	background:#FFF;
+	left:50%;
+	margin-left:-250px;
+	top:100px;
+	width:500px;
+	display:none;
+}
+#regist_float
+{
+	position:fixed;
+	background:#FFF;
+	left:50%;
+	margin-left:-350px;
+	top:100px;
+	width:700px;
+	display:none;
 }
 #banner{
 	display:block;
@@ -41,7 +161,7 @@ body{
 	background:#FFFFFF;
 	list-style:none;
 	display:inline;
-	border-bottom:2px #FFFFFF solid;
+	border-bottom:4px #FFFFFF solid;
 }
 #logalright a:link{
 	font-size: 12px;
@@ -175,7 +295,6 @@ strong{
 	width:800px;
 	margin:0px 0px 0px 0px;
 }
-
 #search2
 {
 	width:799px;
@@ -222,11 +341,27 @@ strong{
 	border-color:#CCCCCC;
 	height:18px;
 }
-.inputtext{
+.inputtext,.inputtext_gray{
 	border-width:1px;
 	border-style:solid;
 	border-color:#CCCCCC;
-	width:200px;
+	width:180px;
+	text-align:left;
+}
+.midinputtext,.midinputtext_gray{
+	border-width:1px;
+	border-style:solid;
+	border-color:#CCCCCC;
+	width:100px;
+	text-align:left;
+}
+.inputtext_gray,.midinputtext_gray
+{
+	color: rgb(153, 153, 153);
+}
+.gray
+{
+	color: rgb(153, 153, 153);
 }
 .smallinputext{
 	border-width:1px;
@@ -235,11 +370,8 @@ strong{
 	width:40px;
 }
 .inputHeaderGrey{
-
 	color:#cccccc;
 }
-
-
 #search2 #searchright2 #searchbutton{
 	height:23px;
 	font-size:12px;
@@ -284,14 +416,24 @@ strong{
 	text-align:left;
 	line-height:28px;
 }
+#itemsearch_l
+{
+	width:498px;
+	font-size:13px;
+	margin:0px auto;
+	text-align:center;
+	line-height:28px;
+}
 .itemsearchth{
 	font-family:"宋体";
-	width:180px;
+	width:130px;
+	text-align:right;
 }
 
 .itemsearchtd1{
 	width:221px;
 }
+
 .itemsearchtd2{
 	width:281px;
 	color:#FF0000;
@@ -338,12 +480,28 @@ text-decoration:none;
 	height:150px;
 	border-width:0px;
 }
-#itemsearch th{
+
+#itemsearch{
+	text-align: center;
+}
+#itemsearch_r
+{
+	width:698px;
+	font-size:13px;
+	margin:0px auto;
 	text-align:center;
-	width:180px;
+	line-height:28px;
 }
 #itemsearch select,#inputtext{
 	width:180px;
+}
+#itemsearch .midselect
+{
+	width:90px;
+}
+#itemsearch_r select
+{
+	text-align:left;
 }
 #tradequery td,#itemsearch td{
 	text-align:left;
@@ -375,6 +533,50 @@ text-decoration:none;
 
 .red{
 	color: #FF0000;
+}
+.user_note
+{
+	float:left;
+	width:647px;
+	background-color:#EBEBEB;
+	margin-right:1px;
+	margin-left:2px;
+}
+.user_note .head
+{
+	height:25px;
+	background-color:#4796E4;
+	font-size:14px;
+	padding-top:4px;
+	text-align:center;
+}
+.user_left
+{
+	background:#EAF2F7;
+	width:150px;
+	float:left;
+	line-height:27px;
+	font-size: 14px;
+	
+}
+.user_left dl
+{
+	margin:15px 10px 10px 10px;
+}
+.user_left dt
+{
+	border-top: 1px solid  #666;
+	font-weight: 700;
+	padding:10px 0 0 10px;
+	cursor: default;
+}
+.user_left dd
+{
+	cursor: pointer;
+}
+.user_left div:hover
+{
+	background: #FFF;
 }
 #footer{
 	float:left;
