--- a/webapp/css/home.css
+++ b/webapp/css/home.css
@@ -307,9 +307,14 @@ strong{
 	width:616px;
 	margin:1px 0px 0px 1px;
 }
+#main li
+{
+	border:#FFFFFF solid 1px;
+}
 #main li:hover
 {
-	background: #DBDBDB;
+	border:#4796E4 1px solid;
+	padding:-1px;
 }
 #search1
 {
