--- a/webapp/admin/css/gz.css
+++ b/webapp/admin/css/gz.css
@@ -64,3 +64,32 @@ td.mywidth{
 	color:#666666;
 }
 
+.user_left
+{
+	background:#EAF2F7;
+	width:150px;
+	float:left;
+	line-height:27px;
+	font-size: 14px;
+	
+}
+.user_left dl
+{
+	margin:15px 10px 10px 10px;
+}
+.user_left dt
+{
+	border-top: 1px solid  #666;
+	font-weight: 700;
+	padding:10px 0 0 10px;
+	cursor: default;
+}
+.user_left dd
+{
+	cursor: pointer;
+}
+.user_left div:hover
+{
+	background: #FFF;
+}
+
