--- a/webapp/admin/css/frame.css
+++ b/webapp/admin/css/frame.css
@@ -265,7 +265,7 @@ span.close
 #category h4{
 	margin:0px 18px 0px 18px;
 	padding:3px 0px 1px 5px;
-	background: #4796E4;
+	background: #69F;
 	font-size:14px;
 }
 #category ul{
