物品详情页面修改

--- a/webapp/css/frame.css
+++ b/webapp/css/frame.css
@@ -5,6 +5,10 @@ body{
 	background:transparent url(../image/back.jpg) scroll center top;
 	-moz-user-select: none; -khtml-user-select: none; user-select: none;
 }
+a
+{
+	text-decoration:none;
+}
 /*---------------∆¯≈›Ã· æ------------------*/
 .lj-tipsWrap{min-width:10px;min-height:15px;font-family:'Segoe UI',Calibri, 'Myriad Pro', Myriad, 'Trebuchet MS', Helvetica, Arial, sans-serif;}
 .lj-tipsWrap,.lj-in,.lj-close{display:inline-block;}
@@ -163,16 +167,6 @@ span.close
 	width:700px;
 	display:none;
 }
-#banner{
-	display:block;
-	float:left;
-	width:799px;
-	margin:-2px 0px -5px 0px;
-	height:52px;
-	border:none;
-	background-image:url(../image/whole8.jpg);
-	background-position:-1px;
-}
 #logalleft{
 	background-image:url(../image/logal8.png);
 	width:799px;
@@ -207,7 +201,6 @@ span.close
 	font-size: 12px;
 	color: #FFFFFF;
 	text-decoration: none;
-
 }
 #logalright a:visited{
 	font-size: 12px;
@@ -368,9 +361,7 @@ strong{
 	display:inline;
 	margin-left:2px;
 	color:#2696ca;
-	text-decoration:none;
-	}
-	
+}
 #search2 #searchright2{
 	float:right;
 	height:30px;
@@ -445,6 +436,7 @@ strong{
 #sendnotehead, #doublehead1, #doublehead2{
 	height:25px;
 	background-color:#4796E4;
+	color:#FFFFFF;
 	font-size:14px;
 	padding-left:5px;
 	padding-top:4px;
@@ -685,4 +677,50 @@ text-decoration:none;
 	width:350px;
 	height:80px;
 
+}
+span.star,span.sa1,span.sa2,span.sa3,span.sa35,span.sa4,span.sa45,span.sa5
+{
+	background: url(../image/grade_bg.gif) no-repeat;
+	height:15px;
+	display: inline-block;
+}
+span.star
+{
+	background-position:0px -16px;
+	width:70px;
+}
+span.sa1
+{
+	background-position:0px 2px;
+	width:14px;
+}
+span.sa2
+{
+	background-position:0px 2px;
+	width:28px;
+}
+span.sa3
+{
+	background-position:0px 2px;
+	width:42px;
+}
+span.sa35
+{
+	background-position:0px 2px;
+	width:49px;
+}
+span.sa4
+{
+	background-position:0px 2px;
+	width:56px;
+}
+span.sa45
+{
+	background-position:0px 2px;
+	width:63px;
+}
+span.sa5
+{
+	background-position:0px 2px;
+	width:70px;
 }
