--- a/webapp/css/home.css
+++ b/webapp/css/home.css
@@ -473,6 +473,7 @@ strong{
 
 #sendnotehead, #doublehead1, #doublehead2{
 	height:25px;
+	color:#FFFFFF;
 	background-color: #4796E4;
 	font-size:14px;
 	padding-left:5px;
