--- a/webapp/css/frame.css
+++ b/webapp/css/frame.css
@@ -4,6 +4,7 @@ body{
 	text-align: center;
 	background:transparent url(../image/back.jpg) scroll center top;
 	-moz-user-select: none; -khtml-user-select: none; user-select: none;
+	margin:0px;
 }
 a
 {
@@ -33,7 +34,7 @@ a
 
 
 /*----------- 可配置css  kind ------------*/
-.lj-tipsWrap{ position: absolute; z-index:1;} /* 可修改z-index 让他不会被盖住*/
+.lj-tipsWrap{ position: absolute; z-index:12;} /* 可修改z-index 让他不会被盖住*/
 /* error css */
 .lj-error{background:#F90;color:#f30; border:1px solid #FB8888; background:#FEF2F2;}
 .lj-error .lj-top{border-top-color:#FB8888;}
@@ -58,6 +59,10 @@ a
 .lj-correct .lj-left .lj-span{border-left-color:#F4FBFF;}
 .lj-correct .lj-bottom .lj-span{border-bottom-color:#F4FBFF;}
 /*---------------气泡提示------------------*/
+#toURL
+{
+	display:none;
+}
 .hide
 {
 	display:none;
@@ -139,6 +144,9 @@ span.close
 #overlay
 {
 	background:#000;
+	filter:alpha(opacity=50);
+	-moz-opacity:0.5;
+	-khtml-opacity: 0.5;
 	opacity:0.5;
 	display:none;
 	position:fixed;
@@ -146,6 +154,7 @@ span.close
 	left:0px;
 	height:100%;
 	width:100%;
+	z-index:11;
 }
 #login_float
 {
@@ -156,6 +165,7 @@ span.close
 	top:150px;
 	width:500px;
 	display:none;
+	z-index:12;
 }
 #regist_float
 {
@@ -166,6 +176,7 @@ span.close
 	top:150px;
 	width:700px;
 	display:none;
+	z-index:12;
 }
 #logalleft{
 	background-image:url(../image/logal8.png);
