--- a/webapp/css/frame.css
+++ b/webapp/css/frame.css
@@ -89,6 +89,118 @@ span.red
 {
 	text-align:right;
 }
+.top
+{
+	width:799px;
+	height:27px;
+	position:absolute;
+	z-index:10;
+	color: #E8E8E8;
+}
+.top .division
+{
+	margin:7px -1px 0px -1px;
+	cursor:default;
+	padding:0px;
+	float:left;
+}
+.top .top_right
+{
+	float:right;
+	height:27px;
+	margin-right:10px;
+}
+.top li
+{
+	list-style:none;
+	float:left;
+	padding:1px 7px 0px 7px;
+	margin-top:6px;
+	cursor:pointer;
+}
+.top a,.top a:visited
+{
+	color: #E8E8E8;
+	text-decoration:none;
+}
+.top #cart_top
+{
+	width:85px;
+}
+.top #cart_top.hover
+{
+	background:#FFFFFF;
+	padding-bottom:4px;
+	border-top:#FFF solid 1px;
+}
+.top #cart_a.hover
+{
+	color:#4796E4;
+	text-decoration:none;
+}
+.top #cart_icon
+{
+	height:15px;
+	width:17px;
+	background:url(../image/cart_icon.png) no-repeat 0px -1px;
+	display:inline-block;
+	margin-bottom:-3px;
+	margin-right:4px;
+}
+.top #cart_icon.hover
+{
+	height:15px;
+	width:17px;
+	background:url(../image/cart_icon.png) no-repeat 0px -18px;
+	display:inline-block;
+	margin-bottom:-3px;
+	margin-right:4px;
+}
+.top #mymall:hover
+{
+	text-decoration:none;
+	background:#FFFFFF;
+	padding-bottom:4px;
+}
+.top #mymall:hover a
+{
+	color:#4796E4;
+}
+
+.top #mymall_icon
+{
+	height:15px;
+	width:17px;
+	background:url(../image/cart_icon.png) no-repeat -17px -1px;
+	display:inline-block;
+	margin-bottom:-3px;
+	margin-right:4px;
+}
+.top #mymall:hover #mymall_icon
+{
+	height:15px;
+	width:17px;
+	background:url(../image/cart_icon.png) no-repeat -17px -18px;
+	display:inline-block;
+	margin-bottom:-3px;
+	margin-right:4px;
+}
+#login_top a:hover,#regist_top a:hover
+{
+	color:#0099FF;
+}
+#top-overlay
+{
+	width:799px;
+	height:27px;
+	position:absolute;
+	background-color:#000000;
+	opacity:0.3;
+	filter:alpha(opacity=30);
+	-moz-opacity:0.3;
+	-khtml-opacity: 0.3;
+	z-index:5;
+}
 .fliter
 {
 	width:100%;
@@ -238,15 +350,16 @@ span.close
 #cart
 {
 	position:absolute;
-	top:99px;
-	right:37px;
+	top:27px;
+	right:10px;
+	height:50px;
 	display:block;
 	width:250px;
-	height:80px;
 	background:#FFF;
 	border:#4796E4 solid ;
 	border-width: 0px 1px 1px 1px;
 	display:none;
+	z-index:13px;
 }
 .cart_loading
 {
