--- a/webapp/css/frame.css
+++ b/webapp/css/frame.css
@@ -360,7 +360,6 @@ span.close
 	top:26px;
 	right:10px;
 	min-height:50px;
-	display:block;
 	width:300px;
 	background:#FFF;
 	border:#4796E4 solid ;
@@ -371,16 +370,15 @@ span.close
 	-moz-border-radius: 5px 0 5px 5px;
 	-webkit-border-radius: 5px 0 5px 5px;
 }
-.cart_loading
+#cart_loading
 {
 	background:url(../image/cart_loading.gif);
 	height:32px;
 	width:32px;
 	display:block;
 	position:absolute;
-	left:50%;
+	left:135px;
 	top:10px;
-	display:none;
 }
 #cart_container
 {
