index的css补全，哪个坑爹的娃删了我的css

--- a/webapp/admin/css/gz.css
+++ b/webapp/admin/css/gz.css
@@ -204,3 +204,16 @@ td.mywidth{
 #item_font17{
 	font-size:17px;
 	}
+#saleAmount {
+background:url(../image/salesAmount.jpg) no-repeat;
+margin: 1px 0px 10px 0px;
+padding: 30px 0px 0px 0px;
+background-color: white;
+
+}
+#orderAmount {
+background:url(../image/orderAmout.jpg) no-repeat;
+margin: 1px 0px 0px 0px;
+padding: 30px 0px 0px 0px;
+background-color: white;
+}
