收藏夹设计基本完成

--- a/webapp/css/user.css
+++ b/webapp/css/user.css
@@ -9,6 +9,7 @@
 #favorite-container div
 {
 	float:left;
+	overflow:hidden;
 }
 #favorite-content
 {
@@ -24,6 +25,10 @@
 {
 	margin-top:12px;
 }
+#favorite-content-body .checkbox input
+{
+	margin-top:39px;
+}
 .column
 {
 	height: 35px;
@@ -35,11 +40,12 @@
 }
 .cell
 {
-	height: 52px;
+	height: 92px;
 	float:left;
-	line-height:52px;
+	line-height:92px;
 	text-align: center;
 	border-right:#FFFDEE 1px solid;
+	padding:20px 0 20px 0;
 }
 .checkbox
 {
@@ -47,7 +53,39 @@
 }
 .p-name
 {
-	width:305px;
+	width:303px;
+}
+.p-name-img
+{
+	height:90px;
+	width:90px;
+	margin:0px 7px 0px 5px;
+	border: 1px solid #DDD;
+}
+.p-name-img img
+{
+	width:87px;
+	height:116px;
+	margin:-7px 0 0 1px;
+}
+.p-name-n
+{
+	line-height:17px;
+	width:198px;
+	text-align:left;
+}
+.fav-add
+{
+	background:url(../image/fav_add.gif);
+	width:94px;
+	height:23px;
+	display:block;
+	margin:20px 0 5px 10px;
+	cursor:pointer;
+}
+.fav_cancel
+{
+	line-height:20px;
 }
 .p-price
 {
@@ -61,4 +99,20 @@
 .inventory
 {
 	width:70px
+}
+#favorite-content-bottom
+{
+	background: whiteSmoke;
+	padding: 8px;
+	border-top: 1px solid #E6E6E6;
+	width:631px;
+}
+.fav-add-b
+{
+	background:url(../image/fav_add.gif);
+	width:94px;
+	height:23px;
+	display: inline-block;
+	cursor:pointer;
+	margin:0 5px -3px 0;;
 }
