item_edit基本完成,等待添加异步处理，和测试！

--- a/webapp/admin/css/gz.css
+++ b/webapp/admin/css/gz.css
@@ -226,3 +226,11 @@ background-color: white;
 	height:100px;
 	border:0;
 	}
+	
+.inputttextlarge{
+	width:70px;
+	}
+	
+#tr_align{
+	text-align:right;
+	}
