--- a/webapp/admin/css/gz.css
+++ b/webapp/admin/css/gz.css
@@ -234,3 +234,11 @@ background-color: white;
 #tr_align{
 	text-align:right;
 	}
+	
+#sendnotehead_fixed{
+	height:25px;
+	background-color:#4796E4;
+	font-size:14px;
+	padding-left:10px;
+	padding-top:4px;
+	}
