--- a/webapp/css/order.css
+++ b/webapp/css/order.css
@@ -1,8 +1,107 @@
 #order_container
 {
 	background: #EFF5F8;
-}
-{
 	border-top: #B7D2DF solid 2px;
+}
+#order_container h1,#payment-c h1
+{
+	line-height: 150%;
+	font-size: 14px;
+	margin:0 0 5px 0;
+	padding: 0px;
+	list-style: none;
+}
+.address_list_inner
+{
+	overflow: hidden;
+	margin-bottom: 7px;
+	border: #B7D2DF dotted 1px;
+	color: #87B4C9;
+	background: #F8FBFC;
+	padding: 5px 0 5px 10px;
+	width: 80%;
+}
+.address_list_inner li strong
+{
+	color:#87B4C9;
+}
+.address_list_inner li.selected
+{
+	color: #F8AA27;
+	background: #FFFAEE;
+	border: #F9BA53 dotted 1px;
+	margin-right:5px;
+}
+.address_list_inner li.selected strong
+{
+	color:#F8AA27;
+}
+#c-info,#payment-c,#ware,#item_list
+{
+	border-bottom: #B7D2DF solid 2px;
+	padding:10px;
+	text-align:left;
+}
+.delete,.delete a,delete a:visited
+{
+	float:right;
+	color: gray;
+	margin-right:10px;
+	text-decoration:none;
+}
+input.txt {
+	border: #7CADC5 solid 1px;
+	background: white;
 	border-bottom: #B7D2DF solid 1px;
+	border-right: #B7D2DF solid 1px;
+	font-size: 12px;
+	color: #333;
+	line-height: 18px;
+	height: 18px;
+}
+#c-input,#payment-c table
+{
+	padding-left: 17px;
+	line-height: 27px;
+	color: #333;
+}
+.add-to-address
+{
+	
+}
+#payment-c table h1
+{
+	color: #333;
+}
+.comment
+{
+	color: #666;
+}
+#item_table
+{
+	margin-left:20px;
+}
+#item_list table
+{
+	border-collapse: collapse;
+	text-align:center;
+	width:100%;
+	line-height: 27px;
+	border: #CCC 1px solid;
+	margin-bottom:5px;
+}
+#item_list td
+{
+	border: #CCC 1px solid;
+	border-left: none;
+	border-right: none;
+}
+.thead
+{
+	background:#F8FBFC
+}
+#pay
+{
+	display:inline-block;
+	margin-right:30px;
 }
