--- a/webapp/css/frame.css
+++ b/webapp/css/frame.css
@@ -521,6 +521,7 @@ span.close
 	height:28px;
 	margin:0px;
 	padding:0px;
+	float:left;
 }
 #globallink li{
 	float:left;
@@ -623,8 +624,8 @@ strong{
 #search2 #searchright1{
 	float:right;
 	height:30px;
-	margin:0px 0px 0px 0px;
-	padding-top:0px;
+	padding:0px;
+	margin-top:4px;
 	color:#2696ca;
 }
 
@@ -668,15 +669,6 @@ strong{
 #search2 #searchright2 #searchbutton{
 	height:23px;
 	font-size:12px;
-}
-#search2 #searchright1 #searchrightcategory{
-	height: 23px;
-	margin-top:5px;
-	border-width:1px;
-	border-style:solid;
-	border-color:#CCCCCC;
-	font-size:12px;
-	color:#2696ca;
 }
 
 #sendnote, #double1, #double2{
