--- a/webapp/css/home.css
+++ b/webapp/css/home.css
@@ -12,6 +12,10 @@ ul
 	padding:0px;
 	list-style:none;
 }
+a
+{
+	text-decoration:none;
+}
 /*---------------∆¯≈›Ã· æ------------------*/
 .lj-tipsWrap{min-width:10px;min-height:15px;font-family:'Segoe UI',Calibri, 'Myriad Pro', Myriad, 'Trebuchet MS', Helvetica, Arial, sans-serif;}
 .lj-tipsWrap,.lj-in,.lj-close{display:inline-block;}
