--- a/webapp/css/item_info.css
+++ b/webapp/css/item_info.css
@@ -5,6 +5,11 @@
 	background: #FFF;
 	border: #C2C2C2 1px solid;
 }
+#recommend-container
+{
+	width:202px;
+	float:left;
+}
 .recommend .head
 {
 	height: 32px;
@@ -204,6 +209,7 @@
 #add_to_cart .disable
 {
 	background-position:0px -41px;
+	cursor:default;
 }
 #add_to_cart .favorite
 {
