--- a/webapp/admin/css/home.css
+++ b/webapp/admin/css/home.css
@@ -486,6 +486,13 @@ span.close
 	background:#FFFFFF url(../image/leftbotton.jpg) no-repeat;
 	margin:1px 1px 0px 0px;	
 }
+#left_user_admin{
+	width:180px;
+	height:600px;
+	float:left;
+	background:#FFFFFF url(../image/leftbotton.jpg) no-repeat;
+	margin:1px 1px 0px 0px;	
+}
 
 #category{
 	background:url(../image/category.jpg) no-repeat;
@@ -509,7 +516,7 @@ span.close
 	background:url(../image/icon1.gif) no-repeat 5px 7px;
 }
 strong{
-	color: #C03;
+	color:#FFF;
 }
 
 #category ul li a:link, #category ul li a:visited{
@@ -687,7 +694,7 @@ strong{
 	background-color: #4796E4;
 	font-size:14px;
 	padding-left:5px;
-	padding-top:4px;
+	padding-top:5px;
 }
 #sendnotecontent, #doublecontent1,#doublecontent2{
 	background-color:#F8F8F8;
