--- a/webapp/css/home.css
+++ b/webapp/css/home.css
@@ -16,6 +16,12 @@ a
 {
 	text-decoration:none;
 }
+#captcha_td img
+{
+	height::30px;
+	width:125px;
+	float:left;
+}
 /*---------------∆¯≈›Ã· æ------------------*/
 .lj-tipsWrap{min-width:10px;min-height:15px;font-family:'Segoe UI',Calibri, 'Myriad Pro', Myriad, 'Trebuchet MS', Helvetica, Arial, sans-serif;}
 .lj-tipsWrap,.lj-in,.lj-close{display:inline-block;}
