--- a/webapp/css/user.css
+++ b/webapp/css/user.css
@@ -91,6 +91,10 @@
 {
 	width:130px;
 }
+.p-price-p
+{
+	line-height:25px;
+}
 .action
 {
 	width:110px;
@@ -116,3 +120,96 @@
 	cursor:pointer;
 	margin:0 5px -3px 0;;
 }
+input.txt {
+	border: #7CADC5 solid 1px;
+	background: white;
+	border-bottom: #B7D2DF solid 1px;
+	border-right: #B7D2DF solid 1px;
+	font-size: 12px;
+	color: #333;
+	line-height: 18px;
+	height: 18px;
+	margin-left:0;
+}
+.long
+{
+	width:300px;
+}
+.short
+{
+	width:60px;
+}
+.address-edit
+{
+	display:none;
+	position:absolute;
+	left:87px;
+	width:625px;
+	padding:10px;
+	background: #EFF5F8;
+	border:1px solid #AACDED;
+	border-radius: 5px 5px 5px 5px;
+	-moz-border-radius: 5px 5px 5px 5px;
+	-webkit-border-radius: 5px 5px 5px 5px;
+	z-index:12;
+}
+.address-edit table
+{
+	margin-left:15px;
+	line-height: 27px;
+	color: #333;
+	text-align: left;
+}
+#address-container
+{
+	background: #EFF5F8;
+}
+#address-content-body
+{
+	border-bottom: #B7D2DF solid 2px;
+}
+#address-content-head h2,#address-bottom h2,.address-edit h2
+{
+	margin:0 0 0 10px;
+	padding:10px 0 10px 0;
+}
+#address-content-body table
+{
+	margin-left:15px;
+	line-height: 27px;
+	color: #333;
+	text-align: left;
+}
+.address-table
+{
+	padding:0 15px;
+}
+.address-table table
+{
+	text-align:center;
+	background: #FFFCEB;
+	border-collapse: collapse;
+	border:1px solid #B7D2DF;
+}
+.address-table td
+{
+	min-height:40px;
+	line-height:40px;
+	border-bottom:1px solid #B7D2DF;
+}
+.tr td
+{
+	height:27px;
+	line-height:27px;
+	background:url(../image/bg_gallery.jpg) #CCC repeat-x 0 -111px;
+}
+td.detail
+{
+	line-height:20px;
+}
+
+
+
+
+
+
